--- a/index.html
+++ b/index.html
@@ -20,8 +20,39 @@
 		</ul>
 	</div>
 </header>
+	<div class="content">
+		<div class="section_one">
+			<img class="logo" src="img/ACM-W_Logo_2_recolor.png">
+			<div class="title">
+				<p class="name"><b>A</b>ssociation&nbspof</br><b>C</b>omputing</br><b>M</b>achinery</br><b>W</b>omen's&nbspChapter</br></p>
+				<a href="http://eepurl.com/bcC_Xn" class="button">Join&nbspthe&nbspmailing&nbsplist!</a>
+			</div>
+		</div>
+		<div class="section_two">
+		<h3 class="header">Meetings</h3>
+		<p class="tagline">Wednesdays at 7pm</br>Dresse Labs 357</br>The Ohio State University</p>
+		</div>
+	</div>
 <footer>
-	
+	<div class="social_icons">
+		<a class="fa-stack" href="https://www.facebook.com/groups/buckhacks">
+			<i class="fa fa-square fa-stack-2x"></i>
+			<i class="fa fa-facebook fa-inverse fa-stack-1x"></i>
+		</a>
+		<a class="fa-stack" href="https://twitter.com/buckhacks">
+			<i class="fa fa-square fa-stack-2x"></i>
+			<i class="fa fa-twitter fa-inverse fa-stack-1x"></i>
+		</a>
+		<a class="fa-stack" href="https://github.com/BuckeyeHackers">
+			<i class="fa fa-square fa-stack-2x"></i>
+			<i class="fa fa-github fa-inverse fa-stack-1x"></i>
+		</a>
+		<a class="fa-stack" href="https://buckeyehackers.slack.com">
+			<i class="fa fa-square fa-stack-2x"></i>
+			<i class="fa fa-slack fa-inverse fa-stack-1x"></i>
+		</a>
+	</div>
+	<p class="signature">Designed and Built for the ACM-W at Ohio State University by Josh Kuehn</p>
 </footer>
 </body>
 </html>
