--- a/join.html
+++ b/join.html
@@ -22,7 +22,15 @@
 		</div>
 	</header>
 	<footer>
-	
-	</footer>
+	<div class="social_icons">
+		<a href="https://www.facebook.com/groups/345321265556424/">
+			<i class="fa fa-facebook-square"></i>
+		</a>
+		<a href="https://www.facebook.com/groups/345321265556424/">
+			<i class="fa fa-"></i>
+		</a>
+	</div>
+	<p class="signature">Designed and Built for the ACM-W at Ohio State University by Josh Kuehn</p>
+</footer>
 </body>
 </html>
