--- a/events.html
+++ b/events.html
@@ -27,8 +27,12 @@
         <h2 class="events_header">Upcoming Events</h2>
 
         <div class="event">
-            <a class="name" href="http://cathacks.cs.uky.edu" target="_blank">CatHacks</a>
-            <h3 class="date">April&nbsp9-10&nbsp&nbsp||&nbsp&nbspLexington,&nbspKY</h3>
+            <a class="name" href="http://ghc.anitaborg.org/" target="_blank">Grace Hopper Conference 2016</a>
+            <h3 class="date">October&nbsp19-21&nbsp&nbsp||&nbsp&nbspHouston,&nbspTX</h3>
+        </div>
+        <div class="event">
+			<a class="name" href="hack.osu.edu" target="_blank">HackOHI/O 2016</a>
+            <h3 class="date">November&nbsp19-20</h3>
         </div>
 
         <h2 class="events_header">Past Events</h2>
@@ -38,16 +42,17 @@
             <h3 class="date">March&nbsp5-6&nbsp&nbsp||&nbsp&nbspKnowlton&nbspHall,&nbspOSU</h3>
         </div>
         <div class="event">
-            <a class="name" href="https://www.hackillinois.org/" target="_blank">HackIllinois</a>
-            <h3 class="date">February&nbsp19-21&nbsp&nbsp||&nbsp&nbspUrbana,&nbspIL</h3>
-        </div>
-        <div class="event">
             <a class="name" href="http://hack.osu.edu" target="_blank">OHI/O&nbsp2015</a>
             <h3 class="date">November&nbsp15-16&nbsp&nbsp||&nbsp&nbspOhio&nbspUnion,&nbspOSU</h3>
         </div>
 	</div>
 	<footer>
-	
-	</footer>
+	<div class="social_icons">
+		<a href="https://www.facebook.com/groups/345321265556424/">
+			<i class="fa fa-facebook-square"></i>
+		</a>
+	</div>
+	<p class="signature">Designed and Built for the ACM-W at Ohio State University by Josh Kuehn</p>
+</footer>
 </body>
 </html>
