--- a/events.html
+++ b/events.html
@@ -2,12 +2,36 @@
 <html>
 <head>
 	<title>
-		ACM-W | Women In Computing
+		ACM-W | Events
 	</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+
+	<!-- ****** faviconit.com favicons ****** -->
+	<link rel="shortcut icon" href="img/favicons/favicon.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="img/favicons/favicon.ico">
+	<link rel="icon" type="image/png" sizes="196x196" href="img/favicons/favicon-192.png">
+	<link rel="icon" type="image/png" sizes="160x160" href="img/favicons/favicon-160.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96.png">
+	<link rel="icon" type="image/png" sizes="64x64" href="img/favicons/favicon-64.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16.png">
+	<link rel="apple-touch-icon" href="img/favicons/favicon-57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favicons/favicon-114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favicons/favicon-72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/favicons/favicon-144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favicons/favicon-60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/favicons/favicon-120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/favicons/favicon-76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/favicons/favicon-152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/favicon-180.png">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
+	<meta name="msapplication-TileImage" content="img/favicons/favicon-144.png">
+	<meta name="msapplication-config" content="img/favicons/browserconfig.xml">
+	<!-- ****** faviconit.com favicons ****** -->
+
 </head>
 <body>
 	<header>
@@ -27,32 +51,114 @@
         <h2 class="events_header">Upcoming Events</h2>
 
         <div class="event">
-            <a class="name" href="http://ghc.anitaborg.org/" target="_blank">Grace Hopper Conference 2016</a>
-            <h3 class="date">October&nbsp19-21&nbsp&nbsp||&nbsp&nbspHouston,&nbspTX</h3>
+            <a class="name" href="https://www.facebook.com/events/1239184472763025/" target="_blank">
+            Tech Talk with Persistent Systems <i class="fa fa-facebook-square"></i></a>
+            <h3 class="date">March 30th | 7:00-8:00pm | DL357</h3>
+            <h3 class="desc">ACM-W will be hosting Sid Chatterjee, CTO of Persistent Systems on "Predictions for 2016: Eight Game-Changing Digital Technologies for Enterprise Transformation</h3>
         </div>
         <div class="event">
-			<a class="name" href="hack.osu.edu" target="_blank">HackOHI/O 2016</a>
-            <h3 class="date">November&nbsp19-20</h3>
+            <a class="name" href="http://ghc.anitaborg.org/" target="_blank">Grace Hopper Conference 2016</a>
+            <h3 class="date">October&nbsp19-21th&nbsp&nbsp||&nbsp&nbspHouston,&nbspTX</h3>
+            <h3 class="desc"></h3>
+        </div>
+        <div class="event">
+			<a class="name" href="http://hack.osu.edu" target="_blank">HackOHI/O 2016</a>
+            <h3 class="date">November&nbsp19-20th</h3>
         </div>
 
         <h2 class="events_header">Past Events</h2>
 
-        <div class="event">
-            <a class="name" href="http://make-oh.io" target="_blank">Makeathon</a>
-            <h3 class="date">March&nbsp5-6&nbsp&nbsp||&nbsp&nbspKnowlton&nbspHall,&nbspOSU</h3>
+		<div class="event">
+            <a class="name" target="_blank">Study Session</a>
+			<h3 class="date">December 3rd</h3>
         </div>
-        <div class="event">
-            <a class="name" href="http://hack.osu.edu" target="_blank">OHI/O&nbsp2015</a>
-            <h3 class="date">November&nbsp15-16&nbsp&nbsp||&nbsp&nbspOhio&nbspUnion,&nbspOSU</h3>
+		<div class="event">
+            <a class="name" target="_blank">Facebook Engineers Firechat</a>
+            <h3 class="date">November 19th</h3>
+        </div>
+		<div class="event">
+            <a class="name" href="http://hack.osu.edu" target="_blank">OHI/O</a>
+			<h3 class="date">November 14-15th</h3>
+        </div>
+		<div class="event">
+            <a class="name" target="_blank">ACM-W Alumni Speaker: Jamie Dickens on Interview Tips</a>
+			<h3 class="date">November 3rd</h3>
+        </div>
+		<div class="event">
+            <a class="name" target="_blank">Lean In Discussion Circle: Women, Work and the Will to Lead</a>
+			<h3 class="date">October 29th</h3>
+        </div>
+		<div class="event">
+            <a class="name" target="_blank">Outreach Event with Cool Tech Girls</a>
+			<h3 class="date">October 24th</h3>
+        </div>
+		<div class="event">
+            <a class="name" target="_blank">Google: Pumpkin Painting Social</a>
+			<h3 class="date">October 20th</h3>
+        </div>
+		<div class="event">
+            <a class="name" target="_blank">Apple: OHI/O Pre-hype event: ResearchKit Demo</a>
+			<h3 class="date">October 20th</h3>
+        </div>
+		<div class="event">
+            <a class="name" target="_blank">Grace Hopper Celebration Conference</a>
+			<h3 class="date">October 14-16th</h3>
+        </div>
+		<div class="event">
+            <a class="name" target="_blank">Tech Talk with Lockheed Martin</a>
+			<h3 class="date">October 13th</h3>
+        </div>
+		<div class="event">
+            <a class="name" target="_blank">Potluck Social</a>
+			<h3 class="date">October 8th</h3>
+        </div>
+		<div class="event">
+			<a class="name" target="_blank">Brooksource Sponsored Fall Picnic: OHI/O Team Formation Social</a>
+			<h3 class="date">October 2nd</h3>
+		</div>
+		<div class="event">
+            <a class="name" target="_blank">Distinguished Speaker: Viral Kadakia</a>
+			<h3 class="date">September 29th</h3>
+			<h3 class="desc">“Power of Big Data” and How to Get Hired at Billion Dollar Startup</h3>
+        </div>
+		<div class="event">
+            <a class="name" target="_blank">Tech Talk with Harris: “College to Career”</a>
+			<h3 class="date">September 24th</h3>
+        </div>
+		<div class="event">
+            <a class="name" target="_blank">CoE: Students Activities Fair</a>
+			<h3 class="date">September 18th</h3>
+        </div>
+		<div class="event">
+			<a class="name" target="_blank">Tech Talk with Aver: Technology and the Healthcare Industry</a>
+			<h3 class="date">September 17th</h3>
+        </div>
+		<div class="event">
+			<a class="name" target="_blank">Lean-In Discussion + Pizza</a>
+			<h3 class="date">September 10th</h3>
+		</div>
+		<div class="event">
+            <a class="name" target="_blank">Marathon Information Session (hosted with ISA)</a>
+			<h3 class="date">September 8th</h3>
+        </div>
+		<div class="event">
+            <a class="name" target="_blank">Ice Cream Social</a>
+            <h3 class="date">September 3th</h3>
         </div>
 	</div>
-	<footer>
+<footer>
 	<div class="social_icons">
-		<a href="https://www.facebook.com/groups/345321265556424/">
+		<a href="https://www.facebook.com/groups/345321265556424/" target="_blank">
 			<i class="fa fa-facebook-square"></i>
 		</a>
+		<a href="http://mailman.cse.ohio-state.edu/mailman/listinfo/acmw" target="_blank">
+			<i class="fa fa-envelope-square"></i>			
+		</a>
+		<a href="https://www.instagram.com/acmwosu/" target="_blank">
+			<i class="fa fa-instagram"></i>			
+		</a>
 	</div>
-	<p class="signature">Designed and Built for the ACM-W at Ohio State University by Josh Kuehn</p>
+	<p class="signature">Designed and Built for the ACM-W at The Ohio State University by Josh Kuehn</p>
 </footer>
 </body>
 </html>
