--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+
+	<!-- ****** faviconit.com favicons ****** -->
+	<link rel="shortcut icon" href="img/favicons/favicon.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="img/favicons/favicon.ico">
+	<link rel="icon" type="image/png" sizes="196x196" href="img/favicons/favicon-192.png">
+	<link rel="icon" type="image/png" sizes="160x160" href="img/favicons/favicon-160.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96.png">
+	<link rel="icon" type="image/png" sizes="64x64" href="img/favicons/favicon-64.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16.png">
+	<link rel="apple-touch-icon" href="img/favicons/favicon-57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favicons/favicon-114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favicons/favicon-72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/favicons/favicon-144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favicons/favicon-60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/favicons/favicon-120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/favicons/favicon-76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/favicons/favicon-152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/favicon-180.png">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
+	<meta name="msapplication-TileImage" content="img/favicons/favicon-144.png">
+	<meta name="msapplication-config" content="img/favicons/browserconfig.xml">
+	<!-- ****** faviconit.com favicons ****** -->
+	
 </head>
 
 <body>
@@ -20,9 +44,9 @@
 		</ul>
 	</div>
 </header>
-	<div class="content">
+	<div>
 		<div class="section_one">
-			<img class="logo" src="img/ACM-W_Logo_2_recolor.png">
+			<img class="logo" src="img/Logo.png">
 			<div class="title">
 				<p class="name"><b>A</b>ssociation&nbspof</br><b>C</b>omputing</br><b>M</b>achinery</br><b>W</b>omen's&nbspChapter</br></p>
 				<a href="http://mailman.cse.ohio-state.edu/mailman/listinfo/acmw" class="button">Join&nbspthe&nbspmailing&nbsplist!</a>
@@ -35,17 +59,17 @@
 	</div>
 <footer>
 	<div class="social_icons">
-		<a href="https://www.facebook.com/groups/345321265556424/">
+		<a href="https://www.facebook.com/groups/345321265556424/" target="_blank">
 			<i class="fa fa-facebook-square"></i>
 		</a>
-		<a href="http://mailman.cse.ohio-state.edu/mailman/listinfo/acmw">
+		<a href="http://mailman.cse.ohio-state.edu/mailman/listinfo/acmw" target="_blank">
 			<i class="fa fa-envelope-square"></i>			
 		</a>
-		<a href="https://instagram.com">
+		<a href="https://www.instagram.com/acmwosu/" target="_blank">
 			<i class="fa fa-instagram"></i>			
 		</a>
 	</div>
-	<p class="signature">Designed and Built for the ACM-W at Ohio State University by Josh Kuehn</p>
+	<p class="signature">Designed and Built for the ACM-W at The Ohio State University by Josh Kuehn</p>
 </footer>
 </body>
 </html>
