--- a/join.html
+++ b/join.html
@@ -2,35 +2,84 @@
 <html>
 <head>
 	<title>
-		ACM-W | Women In Computing
+		ACM-W | Join
 	</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/custom.css">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	
+	<!-- ****** faviconit.com favicons ****** -->
+	<link rel="shortcut icon" href="img/favicons/favicon.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="img/favicons/favicon.ico">
+	<link rel="icon" type="image/png" sizes="196x196" href="img/favicons/favicon-192.png">
+	<link rel="icon" type="image/png" sizes="160x160" href="img/favicons/favicon-160.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96.png">
+	<link rel="icon" type="image/png" sizes="64x64" href="img/favicons/favicon-64.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16.png">
+	<link rel="apple-touch-icon" href="img/favicons/favicon-57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favicons/favicon-114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favicons/favicon-72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/favicons/favicon-144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favicons/favicon-60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/favicons/favicon-120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/favicons/favicon-76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/favicons/favicon-152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicons/favicon-180.png">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
+	<meta name="msapplication-TileImage" content="img/favicons/favicon-144.png">
+	<meta name="msapplication-config" content="img/favicons/browserconfig.xml">
+	<!-- ****** faviconit.com favicons ****** -->
+
 </head>
 <body>
-	<header>
-		<div class="nav">
-		    <ul>
-				<li class="home"><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
-                <li class="join"><a class="active" href="join.html">Join</a></li>
-				<li class="events"><a href="events.html">Events</a></li>
-				<li class="about"><a href="about.html">About</a></li>
-				<li class="contact"><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
-	</header>
-	<footer>
+<header>
+	<div class="nav">
+		<ul>
+			<li class="home"><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
+			<li class="join"><a class="active" href="join.html">Join</a></li>
+			<li class="events"><a href="events.html">Events</a></li>
+			<li class="about"><a href="about.html">About</a></li>
+			<li class="contact"><a href="contact.html">Contact</a></li>
+		</ul>
+	</div>
+</header>
+
+<div class="content">
+		&emsp;There are many great reasons to join the Ohio State chapter of the ACM-W, and we'd be thrilled to have you in our organization.
+		</br>
+		Here are just a few of the reasons to join us:
+		</br>
+		<ul class="list">
+			<li>To help your community</li>
+			<li>To make new friends who share your interest in technology</li>
+			<li>To have participation in a reputable professional association on your resume</li>
+			<li>To be a top pick for employers</li>
+			<li>To receive emails about exciting job opportunities</li>
+			<li>To meet with potential employers face-to-face</li>
+			<li>To have fun! The ACM-W sponsors quarterly events, such as trips to haunted houses, laser tag, and gaming competitions.</li>
+		</ul>
+		If any of those sound appealing to you, we invite you to join us!
+		</br>
+		</br>
+		The ACM-W is open to all students who are interested in technology, regardless of gender, major, or university status.</br>
+		To find information about our next meeting, please see the Events Page. Also, to receive the most up-to-date information in your inbox, be sure to join our Mailing List.
+</div>
+
+<footer>
 	<div class="social_icons">
-		<a href="https://www.facebook.com/groups/345321265556424/">
+		<a href="https://www.facebook.com/groups/345321265556424/" target="_blank">
 			<i class="fa fa-facebook-square"></i>
 		</a>
-		<a href="https://www.facebook.com/groups/345321265556424/">
-			<i class="fa fa-"></i>
+		<a href="http://mailman.cse.ohio-state.edu/mailman/listinfo/acmw" target="_blank">
+			<i class="fa fa-envelope-square"></i>			
+		</a>
+		<a href="https://www.instagram.com/acmwosu/" target="_blank">
+			<i class="fa fa-instagram"></i>			
 		</a>
 	</div>
-	<p class="signature">Designed and Built for the ACM-W at Ohio State University by Josh Kuehn</p>
+	<p class="signature">Designed and Built for the ACM-W at The Ohio State University by Josh Kuehn</p>
 </footer>
 </body>
 </html>
