--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		</div>
 		<div class="section_two">
 		<h3 class="header">Meetings</h3>
-		<p class="tagline">Wednesdays at 7pm</br>Dresse Labs 357</br>The Ohio State University</p>
+		<p class="tagline">Wednesdays at 7pm</br>Dreese Labs 357</br>The Ohio State University</p>
 		</div>
 	</div>
 <footer>
