Added two events

--- a/events.html
+++ b/events.html
@@ -48,13 +48,29 @@
 
 	<div class="events_container">
 
-        <h2 class="events_header">Upcoming Events</h2>
+	<h2 class="events_header">Upcoming Events</h2>
 
         <div class="event">
             <a class="name" href="https://www.facebook.com/events/1239184472763025/" target="_blank">
             Tech Talk with Persistent Systems <i class="fa fa-facebook-square"></i></a>
             <h3 class="date">March 30th | 7:00-8:00pm | DL357</h3>
             <h3 class="desc">ACM-W will be hosting Sid Chatterjee, CTO of Persistent Systems on "Predictions for 2016: Eight Game-Changing Digital Technologies for Enterprise Transformation</h3>
+        </div>
+        <div class="event">
+            <a class="name" href="https://www.eventbrite.com/e/women-in-analytics-conference-registration-22126090733" target="_blank">
+            Women in Analytics Conference</a>
+            <h3 class="date">April 13th | 5:30-9:00pm | 
+            <a href="https://goo.gl/maps/ztrzrph6jSK2" target="_blank">The Faculty Club <i class="fa fa-map-marker"></i></a></h3>
+            <h3 class="desc">We’re gathering Ohio’s brightest data analysts to share their knowledge, experiences, and climbs to the top of an elaborate and growing career. From students to experienced professionals, we invite the public to learn and spread awareness about the thriving world of women in data analytics.</br>
+            <a href="https://www.eventbrite.com/e/women-in-analytics-conference-registration-22126090733" target="blank">RSVP by 4/8</a></h3>
+        </div>
+        <div class="event">
+            <a class="name" href="http://www.cura.osu.edu/rsvptolle" target="_blank">
+            Collaborative analytics: Meeting global challenges through shared research and development</a>
+            <h3 class="date">April 19th | 4:00-5:00pm | 
+            <a href="https://goo.gl/maps/bwsSxh9xKno" target="_blank">Wexner Center for the Arts <i class="fa fa-map-marker"></i></a></h3>
+            <h3 class="desc">This talk will focus on research collaborations that cut across disciplinary, organizational, and geographical boundaries to generate research and development breakthroughs on global challenges such as healthcare and climate change. Pushing the state of the art can be facilitated through these partnerships--public/private and academic/industry--when each group bring their unique strengths and perspectives to bear on scientific problems.</br>
+            <a href="http://www.cura.osu.edu/rsvptolle" target="_blank">RSVP</a></h3>
         </div>
         <div class="event">
             <a class="name" href="http://ghc.anitaborg.org/" target="_blank">Grace Hopper Conference 2016</a>
@@ -66,7 +82,7 @@
             <h3 class="date">November&nbsp19-20th</h3>
         </div>
 
-        <h2 class="events_header">Past Events</h2>
+	<h2 class="events_header">Past Events</h2>
 
 		<div class="event">
             <a class="name" target="_blank">Study Session</a>
