--- a/events.html
+++ b/events.html
@@ -49,7 +49,22 @@
 	<div class="events_container">
 
 	<h2 class="events_header">Upcoming Events</h2>
-
+		<div class="event">
+            <a class="name">
+            HMB Tech Talk</a>
+            <h3 class="date">Wednesday April 6th | 7:00-8:00pm | DL 357 </h3>
+            <h3 class="desc">Moving From College to Enterprise: What to Expect when Entering the Industry</br>
+			After graduation, students quickly discover the real world can be very different from the classroom. From development methodologies to team responsibilities, we will discuss how software is created in an enterprise in order to better prepare students for their transition into the professional world.</br>
+			<strong>As always, food will be provided.</strong></h3>
+        </div>
+        <div class="event">
+            <a class="name" href="https://www.facebook.com/events/1785307778372029" target="_blank">
+            Spring Picnic <i class="fa facebook-square"></i></a>
+            <h3 class="date">Friday April 8th | 6:00-9:00pm | 
+            <a href="https://goo.gl/maps/kRyXui9He5u" target="_blank">Women's Field House <i class="fa fa-map-marker"></i></a></h3>
+            <h3 class="desc">ACM-W is hosting our annual Spring Picnic as part of Arch-E Week this year. Come enjoy some Raising Cane's, fun & games with your friends!</br>
+			(The Women's fields House is located near the RPAC on Cannon Drive)</h3>
+        </div>
         <div class="event">
             <a class="name" href="https://www.eventbrite.com/e/women-in-analytics-conference-registration-22126090733" target="_blank">
             Women in Analytics Conference</a>
