reverted to old date scheme... and smart dates should work

--- a/events.html
+++ b/events.html
@@ -53,7 +53,7 @@
 
 	<h2 class="events_header" id="upcoming">Upcoming Events</h2>
 
-	<h2 class="events_header">Past Events</h2>
+	<h2 class="events_header" id="past">Past Events</h2>
 
 	</div>
 <footer>
