had to change the date formats again. Fuck js...

--- a/events.html
+++ b/events.html
@@ -51,10 +51,12 @@
 
 	<div class="events_container">
 
-	<h2 class="events_header" id="upcoming">Upcoming Events</h2>
-
-	<h2 class="events_header" id="past">Past Events</h2>
-
+	<h2 class="events_header">Upcoming Events</h2>
+		<div id="upcoming">
+		</div>
+	<h2 class="events_header">Past Events</h2>
+		<div id="past">
+		</div>
 	</div>
 <footer>
 	<div class="social_icons">
