Final changes to js-events

--- a/events.html
+++ b/events.html
@@ -74,5 +74,5 @@
 </footer>
 </body>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/eventScript.js"></script>
 </html>
