--- a/events.html
+++ b/events.html
@@ -73,6 +73,6 @@
 	<p class="signature">Designed and Built for the ACM-W at The Ohio State University by Josh Kuehn</p>
 </footer>
 </body>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="js/eventScript.js"></script>
 </html>
