Updated mailing list link nk and meeting location

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 <p>&emsp;The Ohio State Chapter of the ACM-W was chartered on May 13, 2003. Our membership is open to all students interested in furthering the mission of the ACM-W, male or female, undergrad or grad, etc.</p>
 <p>&emsp;If you have come to our page but attend another establishment that does not have an ACM-W chapter and are interested in starting your own, you can find more information 
 <a href="http://www.acm.org/chapters/students/form-acmw" target="_blank">here.</a></p>
-&emsp;Thank you for taking the time to check us out. We would love to have you join us! To receive the latest information about our meetings and events, please see our Events Page and subscribe to our Email List.
+&emsp;Thank you for taking the time to check us out. We would love to have you join us! To receive the latest information about our meetings and events, please see our <a href="/events">Events Page</a> and subscribe to our <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcCmYPK8j_iSbyEe9RLsHOArEd3MYNZztvymtjzRwXie3-4A/viewform">Email List</a>.
 </div>
 <footer>
 	<div class="social_icons">
