--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 			<img class="logo" src="img/Logo.png">
 			<div class="title">
 				<p class="name"><b>A</b>ssociation&nbspof</br><b>C</b>omputing</br><b>M</b>achinery</br><b>W</b>omen's&nbspChapter</br></p>
-				<a href="http://mailman.cse.ohio-state.edu/mailman/listinfo/acmw" class="button">Join&nbspthe&nbspmailing&nbsplist!</a>
+				<a href="https://docs.google.com/forms/d/e/1FAIpQLSdcCmYPK8j_iSbyEe9RLsHOArEd3MYNZztvymtjzRwXie3-4A/viewform" class="button">Join&nbspthe&nbspmailing&nbsplist!</a>
 			</div>
 		</div>
 		<div class="section_two">
 		<h3 class="header">Meetings</h3>
-		<p class="tagline">Wednesdays at 7pm</br>Dreese Labs 357</br>The Ohio State University</p>
+		<p class="tagline">Wednesdays at 7pm</br>Dreese Labs 264</br>The Ohio State University</p>
 		</div>
 	</div>
 <footer>
