--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
 		<p class="tagline">Wednesdays at 7pm</br>Dreese Labs 264</br>The Ohio State University</p>
 		<h3 class="header">What we've been up to</h3>
 		<p class="tagline">
-		<a href="img/YearinReview.pdf"><strong>&#8250;</strong> 2015-2016 Year in Review</a>
+		<a href="img/YearinReview2016.pdf"><strong>&#8250;</strong> 2016-2017 Year in Review</a>
 		<br />
 		<a href="img/GHCTripReport.pdf"><strong>&#8250;</strong> 2016 Grace Hopper Trip Report</a>
+		<br />
+		<a href="img/YearinReview.pdf"><strong>&#8250;</strong> 2015-2016 Year in Review</a>
 	</p>
 		</div>
 	</div>
